--- a/app/src/main/res/layout/fragment_more.xml
+++ b/app/src/main/res/layout/fragment_more.xml
@@ -3,16 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:background="@color/Black600"
+    >
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/gudea"
         android:text="@string/min_temp"
+        android:textColor="@color/Black100"
         android:textSize="15sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -21,10 +24,11 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/gudea"
         android:text="@string/max_temp"
+        android:textColor="@color/Black100"
         android:textSize="15sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
@@ -33,10 +37,11 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/gudea"
         android:text="@string/temp"
+        android:textColor="@color/Black100"
         android:textSize="15sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
@@ -45,10 +50,11 @@
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/gudea"
         android:text="@string/pressure"
+        android:textColor="@color/Black100"
         android:textSize="15sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
@@ -57,10 +63,11 @@
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/gudea"
         android:text="@string/humidity"
+        android:textColor="@color/Black100"
         android:textSize="15sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
@@ -69,34 +76,37 @@
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/gudea"
         android:text="@string/cloud_percent"
+        android:textColor="@color/Black100"
+        android:textSize="15sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView9"
-        android:textSize="15sp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
     <TextView
         android:id="@+id/textView11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/gudea"
         android:text="@string/wind_speed"
         android:textSize="15sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView10" />
+        app:layout_constraintTop_toBottomOf="@+id/textView10"
+        android:textColor="@color/Black100" />
 
     <TextView
         android:id="@+id/textView12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/gudea"
         android:text="@string/wind_degrees"
+        android:textColor="@color/Black100"
         android:textSize="15sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView11" />
@@ -105,10 +115,11 @@
         android:id="@+id/textView22"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/gudea"
         android:text="@string/description"
+        android:textColor="@color/Black100"
         android:textSize="15sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView12" />
@@ -118,7 +129,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.55" />
+        app:layout_constraintGuide_percent="0.6" />
 
     <TextView
         android:id="@+id/fragment_more_min_temp"
@@ -127,6 +138,7 @@
         android:layout_marginStart="16dp"
         android:fontFamily="@font/gudea"
         android:text="TextView"
+        android:textColor="@color/Black100"
         android:textSize="15sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
         app:layout_constraintStart_toStartOf="@+id/guideline" />
@@ -138,6 +150,7 @@
         android:layout_marginStart="16dp"
         android:fontFamily="@font/gudea"
         android:text="TextView"
+        android:textColor="@color/Black100"
         android:textSize="15sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
         app:layout_constraintStart_toStartOf="@+id/guideline" />
@@ -149,6 +162,7 @@
         android:layout_marginStart="16dp"
         android:fontFamily="@font/gudea"
         android:text="TextView"
+        android:textColor="@color/Black100"
         android:textSize="15sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
         app:layout_constraintStart_toStartOf="@+id/guideline" />
@@ -160,6 +174,7 @@
         android:layout_marginStart="16dp"
         android:fontFamily="@font/gudea"
         android:text="TextView"
+        android:textColor="@color/Black100"
         android:textSize="15sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
         app:layout_constraintStart_toStartOf="@+id/guideline" />
@@ -171,6 +186,7 @@
         android:layout_marginStart="16dp"
         android:fontFamily="@font/gudea"
         android:text="TextView"
+        android:textColor="@color/Black100"
         android:textSize="15sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
         app:layout_constraintStart_toStartOf="@+id/guideline" />
@@ -182,6 +198,7 @@
         android:layout_marginStart="16dp"
         android:fontFamily="@font/gudea"
         android:text="TextView"
+        android:textColor="@color/Black100"
         android:textSize="15sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView10"
         app:layout_constraintStart_toStartOf="@+id/guideline" />
@@ -193,6 +210,7 @@
         android:layout_marginStart="16dp"
         android:fontFamily="@font/gudea"
         android:text="TextView"
+        android:textColor="@color/Black100"
         android:textSize="15sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView11"
         app:layout_constraintStart_toStartOf="@+id/guideline" />
@@ -204,6 +222,7 @@
         android:layout_marginStart="16dp"
         android:fontFamily="@font/gudea"
         android:text="TextView"
+        android:textColor="@color/Black100"
         android:textSize="15sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView12"
         app:layout_constraintStart_toStartOf="@+id/guideline" />
@@ -215,6 +234,7 @@
         android:layout_marginStart="16dp"
         android:fontFamily="@font/gudea"
         android:text="TextView"
+        android:textColor="@color/Black100"
         android:textSize="15sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView22"
         app:layout_constraintStart_toStartOf="@+id/guideline" />
