--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <array name="preloaded_fonts" translatable="false">
+        <item>@font/cormorant_bold</item>
         <item>@font/gudea</item>
+        <item>@font/gudea_bold</item>
         <item>@font/roboto_light</item>
         <item>@font/roboto_mono_light</item>
         <item>@font/roboto_mono_thin</item>
+        <item>@font/roboto_slab</item>
+        <item>@font/roboto_slab_light</item>
     </array>
 </resources>
