--- a/app/src/main/res/layout/item_three_hours.xml
+++ b/app/src/main/res/layout/item_three_hours.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="64dp"
-    android:layout_height="120dp">
+    android:layout_height="120dp"
+    android:id="@+id/item_three_hours_con_l">
 
     <TextView
         android:id="@+id/item_three_hours_time"
