--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,20 +36,23 @@
             app:layout_constraintTop_toBottomOf="@+id/activity_main_current_temp"
             android:overScrollMode="never"/>
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
+        <com.jaredrummler.materialspinner.MaterialSpinner
+            android:id="@+id/activity_main_spinner"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:fontFamily="@font/gudea"
-            android:text="Moscow"
+            android:text="sdf"
+            android:textAlignment="center"
             android:textColor="@color/Black50"
-            android:textSize="36sp"
+            android:textSize="28sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:ms_background_color="@color/Black600"
+            app:ms_hide_arrow="true" />
 
         <TextView
             android:id="@+id/activity_main_current_desc"
@@ -65,7 +68,7 @@
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+            app:layout_constraintTop_toBottomOf="@+id/activity_main_spinner" />
 
         <View
             android:layout_width="0dp"
